# curso-django

./: .flake8  .pyup.yml  .travis.yml  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: django.yml
base/: views.py
contrib/: env-sample
core/: settings.py
pypro/: settings.py  urls.py
