[tool.poetry]
name = "curso-django"
version = "0.1.0"
description = ""
authors = ["Fernando <luiz-fernando@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
