[tool.poetry]
name = "curso-django"
version = "0.1.0"
description = ""
authors = ["Luiz Fernando <luiz-fernando@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
